acceptance/tests/fixtures/cases/api-gateways/jwt-auth/httproute-invalid-external-ref.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-auth-invalid
spec:
  parentRefs:
  - name: gateway
    sectionName: http-invalid-attach
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/admin"
      backendRefs:
        - name: static-server
          port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: consul.hashicorp.com
          kind: RouteAuthFilter
          name: route-jwt-auth-filter-other
    - matches:
      - path:
          type: PathPrefix
          value: "/pet"
      backendRefs:
        - name: static-server
          port: 8080
