acceptance/tests/fixtures/cases/api-gateways/jwt-auth/httproute-no-auth-on-auth-listener.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-no-auth-on-auth-listener
spec:
  parentRefs:
  - name: gateway
    sectionName: http-auth
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/admin-no-auth"
      backendRefs:
        - name: static-server
          port: 8080
    - matches:
      - path:
          type: PathPrefix
          value: "/pet-no-auth"
      backendRefs:
        - name: static-server
          port: 8080
