acceptance/tests/fixtures/cases/api-gateways/jwt-auth/jwt-route-filter.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: RouteAuthFilter
metadata:
  name: route-jwt-auth-filter
spec:
  jwt:
    providers:
    - name: "local"
      verifyClaims:
      - path:
          - role
        value: doctor
