acceptance/tests/fixtures/cases/api-gateways/jwt-auth/kustomization.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
- ../../../bases/api-gateway
- ../../static-server-inject
- httproute-auth.yaml
- httproute-invalid-external-ref.yaml
- httproute2-auth.yaml
- httproute-no-auth-on-auth-listener.yaml
- jwt-provider.yaml
- jwt-route-filter.yaml
- gateway-policy.yaml


patches:
- path: httproute.yaml
- path: api-gateway.yaml
